get pokemon information to info-card when component redirects

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <nav>
-  <a class="button" routerLink="/" routerLinkActive="activebutton">Home</a> |
-  <a class="button" routerLink="/info" routerLinkActive="activebutton">Stats</a>
+  <a class="button" routerLink="/" routerLinkActive="activebutton">Home</a>
 </nav>
 
 <router-outlet></router-outlet>
