--- a/src/app/cards/info-card/info-card.component.html
+++ b/src/app/cards/info-card/info-card.component.html
@@ -1,11 +1,11 @@
 <mat-card class="mat-elevation-z4">
     <mat-card-header>
-    <mat-card-title>{{pokemon.index}}. {{pokemon.name}}</mat-card-title>
+    <mat-card-title>{{pokemonInfo.index}}. {{pokemonInfo.name}}</mat-card-title>
     </mat-card-header>
-    <img mat-card-image src={{pokemon.image}}>
+    <img mat-card-image src={{pokemonInfo.image}}>
     <mat-card-content>
     <p>
-       
+        {{pokemonInfo.description}}
     </p>
     </mat-card-content>
     
