Feat: Style home page and infor-card
Added background and centred info-cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<nav>
-  <a class="button" routerLink="/" routerLinkActive="activebutton">Home</a>
-</nav>
+
+<mat-toolbar class="mat-elevation-z8" fxLayout="row" color="primary">
+  <span fxFlex>💥💥 Pokellection 🔥 🔥 </span>
+</mat-toolbar>
 
 <router-outlet></router-outlet>
