--- a/src/app/cards/info-card/info-card.component.html
+++ b/src/app/cards/info-card/info-card.component.html
@@ -1,4 +1,5 @@
-<mat-card class="mat-elevation-z4">
+<div class="main-div" >
+<mat-card fxFlex="20%" fxFlex.xs="50%" fxFlex.sm="25%" class="mat-elevation-z4">
     <mat-card-header>
     <mat-card-title>{{pokemonInfo.index}}. {{pokemonInfo.name}}</mat-card-title>
     </mat-card-header>
@@ -6,8 +7,10 @@
     <mat-card-content>
     <p>
         {{pokemonInfo.description}}
+        {{pokemonInfo.weight}}
     </p>
     </mat-card-content>
     
 </mat-card>
+</div>
 
