Feat: Implement search component
Pass data from user input to service using form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-
-<mat-toolbar class="mat-elevation-z8" fxLayout="row" color="primary">
-  <span fxFlex>💥💥 Pokellection 🔥 🔥 </span>
-</mat-toolbar>
+<app-header>
+</app-header> 
 
 <router-outlet></router-outlet>
