--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,4 @@
-<p>header works!</p>
+<mat-toolbar class="mat-elevation-z8" fxLayout="row" color="primary">
+    <span fxFlex>💥💥 Pokellection 🔥 🔥 </span>
+    <app-search-pokemon></app-search-pokemon>
+</mat-toolbar>
