--- a/src/app/cards/card/card.component.html
+++ b/src/app/cards/card/card.component.html
@@ -1,4 +1,4 @@
-<mat-card  class="mat-elevation-z4" (click)="clickFunction($event, pokemon)" [routerLink]="[pokemon.name]" >
+<mat-card style="backgroundColor: rgba(227, 242, 253 )"  class="mat-elevation-z4" (click)="clickFunction($event, pokemon)" [routerLink]="[pokemon.name]" >
     <mat-card-header>
     <mat-card-title>{{pokemon.index}}. {{pokemon.name}}</mat-card-title>
     </mat-card-header>
