--- a/src/app/cards/info-card/info-card.component.html
+++ b/src/app/cards/info-card/info-card.component.html
@@ -1,19 +1,36 @@
 <div class="main-div" >
-<mat-card fxFlex="20%" fxFlex.xs="50%" fxFlex.sm="25%" class="mat-elevation-z4">
+<mat-card style="backgroundColor: rgba(227, 242, 253 )" fxFlex="20%" fxFlex.xs="50%" fxFlex.sm="25%" class="mat-elevation-z4">
     <mat-card-header>
     <mat-card-title *ngIf="pokemonInfo">{{pokemonInfo.index}}. {{pokemonInfo.name}}</mat-card-title>
     </mat-card-header>
     <img mat-card-image *ngIf="pokemonInfo" src={{pokemonInfo.image}}>
-    <mat-card-content>
-    <p *ngIf="pokemonInfo">
-        {{pokemonInfo.description}}
-        {{pokemonInfo.weight}}
-        {{pokemonInfo.height}} 
-        {{pokemonInfo.stats}}
-        {{pokemonInfo.abilities}}
+    <div *ngIf="pokemonInfo">
+    <span layout="row"><hr flex/>
+        <mat-card-content>
+            {{pokemonInfo.description}}
+        </mat-card-content>
+    <hr flex/></span>
 
-    </p>
+    <mat-card-content>
+        {{pokemonInfo.weight}}Kg
     </mat-card-content>
+
+    <span layout="row"><hr flex/>
+        <mat-card-content>
+            {{pokemonInfo.height}}m
+        </mat-card-content>
+    <hr flex/></span>
+    
+    
+    <mat-card-content>
+        Abiities : {{pokemonInfo.abilities}} 
+    </mat-card-content>
+    <span layout="row"><hr flex/>
+    <mat-card-content>
+            Stats: {{pokemonInfo.stats}} 
+    </mat-card-content>
+    <hr flex/></span>
+   </div>
     
 </mat-card>
 </div>
